<resources>
    <string name="app_name">CustomView</string>
    <string name="square">사각형</string>
    <string name="talkback_drawing_paper">Canvas 영역입니다.</string>
    <string name="talkback_add_random_rect">사각형을 랜덤한 위치에 추가합니다.</string>
    <string name="talkback_draw_shape_is_done">도형이 그려졌습니다.</string>
    <string name="background_color">배경색</string>
    <string name="transparent">투명도</string>
    <string name="image">사진</string>
    <string name="talkback_add_image">사진을 추가합니다.</string>
    <string name="vote_window">투표창</string>
    <string name="packing_item">준비물</string>
    <string name="vote_is_already_underway">현재 진행 중인 투표가 있습니다.</string>
    <string name="accept">찬성</string>
    <string name="decline">반대</string>
    <string name="drawing_name_header">이름</string>
    <string name="changing_voting_item_is_not_allowed">투표 중인 아이템의 이름은 변경할 수 없습니다.</string>
    <string name="change_name">이름 변경</string>
</resources>