<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.paint.PaintFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <TextView
        android:id="@+id/tv_board"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_for_board_item"
        android:gravity="center"
        android:text="@string/packing_item"
        android:paddingVertical="3dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_item_board"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="@id/guideline_top"
        app:layout_constraintEnd_toEndOf="@id/guideline_vote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_board"
        app:spanCount="3"
        tools:listitem="@layout/item_for_board" />

    <include
        layout="@layout/vote_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_top"
        app:layout_constraintEnd_toEndOf="@id/guideline_side"
        app:layout_constraintStart_toStartOf="@id/guideline_vote"
        app:layout_constraintTop_toTopOf="parent" />

    <com.dothebestmayb.customview.presentation.ui.paint.DrawingPaper
        android:id="@+id/drawing_paper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/talkback_drawing_paper"
        app:layout_constraintBottom_toTopOf="@id/btn_add_rect"
        app:layout_constraintEnd_toStartOf="@id/guideline_side"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"
        custom:drawingColor="@color/black"
        custom:shape="line" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/saintSoftBlue"
        app:layout_constraintEnd_toEndOf="@id/guideline_side"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drawing_paper" />


    <Button
        android:id="@+id/btn_add_rect"
        style="@style/BottomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/talkback_add_random_rect"
        android:text="@string/square"
        app:icon="@drawable/baseline_crop_square_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_add_image"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/left_rounded" />

    <Button
        android:id="@+id/btn_add_image"
        style="@style/BottomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/talkback_add_image"
        android:text="@string/image"
        app:icon="@drawable/baseline_image_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_add_rect"
        app:shapeAppearanceOverlay="@style/right_rounded" />

    <View
        android:id="@+id/v_side"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/shapeAddButtonFilled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_side"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_background_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:text="@string/background_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/v_side"
        app:layout_constraintTop_toTopOf="@id/v_side" />

    <Button
        android:id="@+id/btn_background_color"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:enabled="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_side"
        app:layout_constraintTop_toBottomOf="@id/tv_background_color"
        tools:text="#D6DFE9"
        tools:textColor="#D6DFE9" />

    <TextView
        android:id="@+id/tv_transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:text="@string/transparent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/v_side"
        app:layout_constraintTop_toBottomOf="@id/btn_background_color" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:enabled="false"
        android:stepSize="1"
        android:value="5"
        android:valueFrom="1"
        android:valueTo="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_side"
        app:layout_constraintTop_toBottomOf="@id/tv_transparent"
        app:thumbHeight="28dp"
        app:trackColor="@color/saintSoftBlue" />
</androidx.constraintlayout.widget.ConstraintLayout>